--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,7 @@ uvicorn>=0.15.0
 motor>=2.5.0
 pydantic>=1.8.0
 python-dotenv>=0.19.0
+python-jose[cryptography]
+passlib[bcrypt]
+python-multipart
+email-validator
